opam-version: "2.0"
maintainer: "Anurag Soni <anurag@sonianurag.com>"
authors: [ "Anurag Soni <anurag@sonianurag.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anuragsoni/routes"
bug-reports: "https://github.com/anuragsoni/routes/issues"
dev-repo: "git+https://github.com/anuragsoni/routes.git"
doc: "https://anuragsoni.github.io/routes/"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" {>= "4.04.2"}
  "dune" {build}
  "astring"
  "alcotest" {with-test}
]
synopsis: "Typed routing for OCaml applications"
description: """
routes provides combinators for adding typed routing
to OCaml applications. The core library will be independent
of any particular web framework or runtime. It also provides
a `sprintf` like function (it uses the same representation of
a route as a 'format string') to reconstruct URLs.
"""
